--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,27 @@
+# server {
+# 	listen 80 default_server;
+# 	listen [::]:80 default_server;
+
+# 	server_name _;
+
+# 	location / {
+# 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+# 		proxy_set_header Host $host;
+# 		proxy_pass http://127.0.0.1:8080;
+# 		proxy_http_version 1.1;
+# 		proxy_set_header Upgrade $http_upgrade;
+# 		proxy_set_header Connection "upgrade";
+# 	}
+# }
+
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
+    listen 80;
+    server_name _;
 
-	server_name _;
-
-	location / {
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Host $host;
-		proxy_pass http://127.0.0.1:8888;
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-	}
+    location / {
+        proxy_pass http://127.0.0.1:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
