--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-ws": "^5.0.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.7.0",
-    "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^8.4.1"
-  }
+    "name": "x-api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "type": "commonjs",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "express-ws": "^5.0.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.7.0",
+        "mongoose": "^9.0.0",
+        "multer": "^1.4.5-lts.1",
+        "nodemon": "^3.1.11"
+    },
+    "devDependencies": {
+        "@faker-js/faker": "^8.4.1"
+    }
 }
